# TP_Patterns

./: CMakeLists.txt  README.md
include/Actions/: ActionManager.h  AddFightingSquadAction.h  AddResourceSquadAction.h  AddSquadAction.h  IrrelevantAction.h  UserAction.h
include/Commands/: AddFightingSquadCommand.h  AddResourceSquadCommand.h  AddSquadCommand.h  AddUnitCommand.h  Command.h  CommandManager.h  DeleteUnitsCommand.h  ExitCommand.h  IrrelevantCommand.h
include/GameObjects/: Direction.h  Drawable.h  EnemyDirection.h  Game.h  Player.h  Pool.h  ResourceDirection.h  Tickable.h
include/QueryHandling/: BufferStream.h  Executor.h  IStream.h  PlayerInterface.h  Query.h  StandardInputStream.h
include/Units/: ArmorWarrior.h  ImmortalMiner.h  Miner.h  SimpleMiner.h  SimpleWarrior.h  SniperWarrior.h  TeleportingMiner.h  Unit.h  UnitSquad.h  Warrior.h
include/Units/Miners/: ImmortalMiner.h  Miner.h  SimpleMiner.h  TeleportingMiner.h
include/Units/Positions/: PoolPosition.h  Position.h  RoadPosition.h
include/Units/Warriors/: ArmorWarrior.h  SimpleWarrior.h  SniperWarrior.h  Warrior.h
src/: main.cpp
src/Actions/: ActionManager.cpp  AddFightingSquadAction.cpp  AddResourceSquadAction.cpp  AddSquadAction.cpp  IrrelevantAction.cpp  UserAction.cpp
src/Commands/: AddFightingSquadCommand.cpp  AddResourceSquadCommand.cpp  AddSquadCommand.cpp  AddUnitCommand.cpp  Command.cpp  CommandManager.cpp  DeleteUnitsCommand.cpp  ExitCommand.cpp  IrrelevantCommand.cpp
src/GameObjects/: Direction.cpp  Drawable.cpp  EnemyDirection.cpp  Game.cpp  Player.cpp  Pool.cpp  ResourceDirection.cpp  Tickable.cpp
src/QueryHandling/: BufferStream.cpp  Executor.cpp  IStream.cpp  PlayerInterface.cpp  Query.cpp  StandardInputStream.cpp
src/Units/: ArmorWarrior.cpp  ImmortalMiner.cpp  Miner.cpp  SimpleMiner.cpp  SimpleWarrior.cpp  SniperWarrior.cpp  TeleportingMiner.cpp  Unit.cpp  UnitSquad.cpp  Warrior.cpp
src/Units/Miners/: ImmortalMiner.cpp  Miner.cpp  SimpleMiner.cpp  TeleportingMiner.cpp
src/Units/Positions/: PoolPosition.cpp  Position.cpp  RoadPosition.cpp
src/Units/Warriors/: ArmorWarrior.cpp  SimpleWarrior.cpp  SniperWarrior.cpp  Warrior.cpp
